edit tag name in attributeType
